# MoSame

./: README.md  docker-compose.yml
back-end/: Dockerfile  app.py  entrypoint.sh  pyproject.toml
back-end/public/data/: escuelas_prueba.csv  municipios_geo.geojson  municipios_localidades.csv  municipios_regiones_sanitarias.csv
back-end/src/: __init__.py  config.py  routes.py
back-end/src/controllers/: hello_world.py
back-end/src/core/: database.py  seeds.py
back-end/src/core/derivacion/: __init__.py  derivacion.py
back-end/src/core/derivaciones/: derivacion.py
back-end/src/core/dispositivos/: dispositivo.py
back-end/src/core/identidad_genero/: __init__.py  identidad_genero.py
back-end/src/core/llamada_0800/: __init__.py  llamada_0800.py
back-end/src/core/llamada_cetecsm/: __init__.py  llamada_cetecsm.py
back-end/src/core/malestar_emocional/: __init__.py  malestar_emocional.py
back-end/src/core/motivo_general_acompanamiento/: __init__.py  motivo_general_acompanamiento.py
back-end/src/core/motivo_general_derivacion/: __init__.py  motivo_general_derivacion.py
back-end/src/core/municipio/: __init__.py  municipio.py
back-end/src/core/permissions/: __init__.py  permission.py  role.py
back-end/src/core/persona_cetecsm/: __init__.py  persona_cetecsm.py
back-end/src/core/prueba/: __init__.py  prueba.py
back-end/src/core/schemas/: actividad.py  actividades_externas.py  actividades_internas.py  anio.py  como_ubico.py  derivacion.py  detalle_motivo_de_la_consulta.py  dispositivo.py  division.py  (+18 more)
back-end/src/web/: __init__.py  config.py  routes.py
(+109 files in other folders)
